// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart renders correctly 1`] = `
<React.Fragment>
  <ForwardRef(WithStyles)
    className=""
    variant="h5"
  >
    0
     
    Classes
  </ForwardRef(WithStyles)>
</React.Fragment>
`;

exports[`Cart renders correctly with multiple sections with the same id 1`] = `
<React.Fragment>
  <ForwardRef(WithStyles)
    className=""
    variant="h5"
  >
    1
     
    Class
  </ForwardRef(WithStyles)>
  <ForwardRef(WithStyles)
    section={
      Object {
        "id": "123",
      }
    }
  />
</React.Fragment>
`;

exports[`Cart renders correctly with one section 1`] = `
<React.Fragment>
  <ForwardRef(WithStyles)
    className=""
    variant="h5"
  >
    1
     
    Class
  </ForwardRef(WithStyles)>
  <ForwardRef(WithStyles)
    section={
      Object {
        "id": "12345",
      }
    }
  />
</React.Fragment>
`;
